# rust-fasthash

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  index.html
.github/workflows/: audit.yml  audit_check.yml  clippy_check.yml  cross_compile.yml  nightly_lints.yml  test.yml
.travis/: before-install.sh  before_install.sh
docs/master/: search-index.js
docs/master/fasthash/: BuildHasherExt.t.html  index.html  sidebar-items.js  struct.SeaHasher.html  struct.Seed.html  trait.BufHasher.html  trait.FastHash.html  trait.FastHasher.html  trait.Fingerprint.html  trait.HasherExt.html  trait.StreamHasher.html
docs/master/fasthash_sys/: CityHash128.v.html  CityHash128WithSeed.v.html  CityHash32WithSeed.v.html  CityHashCrc128.v.html  MurmurHash1.v.html  SpookyHasherNew.v.html  XXH32_digest.v.html  XXH32_state_t.t.html  XXH64_digest.v.html  XXH64_reset.v.html  XXH64_state_t.t.html  XXH_ERROR.v.html  constant.XXH_ERROR.html  constant.XXH_OK.html  enum._bindgen_ty_9.html  farmhash128_to_64.v.html  farmhash64.v.html  farmhash_fingerprint64.v.html  farmhash_fingerprint_uint128.v.html  fn.CityHash128.html  fn.CityHash128WithSeed.html  fn.CityHash32WithSeed.html  fn.CityHash64.html  fn.CityHash64WithSeed.html  fn.CityHash64WithSeeds.html  fn.CityHashCrc128.html  fn.CityHashCrc128WithSeed.html  fn.CityHashCrc256.html  fn.MurmurHash1.html  fn.MurmurHash1Aligned.html  fn.MurmurHash2.html  fn.MurmurHash2A.html  fn.MurmurHash3_x64_128.html  fn.MurmurHash3_x86_128.html  fn.MurmurHash3_x86_32.html  fn.MurmurHash64A.html  fn.MurmurHash64B.html  fn.MurmurHashAligned2.html  fn.MurmurHashNeutral2.html  fn.SpookyHasherFinal.html  (+79 more)
docs/v0.2.0/: search-index.js
docs/v0.2.0/fasthash/: FastHash.t.html  index.html  sidebar-items.js  trait.FastHash.html  trait.Fingerprint.html  trait.HasherExt.html
docs/v0.2.0/fasthash_sys/: CityHashCrc256.v.html  MurmurHash2.v.html  MurmurHash3_x86_128.v.html  MurmurHash64B.v.html  MurmurHashNeutral2.v.html  SpookyHasherFree.v.html  XXH32_freeState.v.html  XXH64_createState.v.html  XXH64_update.v.html  XXH_OK.v.html  _bindgen_ty_7.t.html  _bindgen_ty_8.t.html  _bindgen_ty_9.t.html  constant.XXH_ERROR.html  constant.XXH_OK.html  enum._bindgen_ty_7.html  farmhash32_with_seed.v.html  farmhash_fingerprint_uint128_c_t.v.html  fn.CityHash128.html  fn.CityHash128WithSeed.html  fn.CityHash32WithSeed.html  fn.CityHash64.html  fn.CityHash64WithSeed.html  fn.CityHash64WithSeeds.html  fn.CityHashCrc128.html  fn.CityHashCrc128WithSeed.html  fn.CityHashCrc256.html  fn.MurmurHash1.html  fn.MurmurHash1Aligned.html  fn.MurmurHash2.html  fn.MurmurHash2A.html  fn.MurmurHash3_x64_128.html  fn.MurmurHash3_x86_128.html  fn.MurmurHash3_x86_32.html  fn.MurmurHash64A.html  fn.MurmurHash64B.html  fn.MurmurHashAligned2.html  fn.MurmurHashNeutral2.html  fn.SpookyHasherFinal.html  fn.SpookyHasherFree.html  (+74 more)
docs/v0.2.1/: search-index.js
docs/v0.2.1/fasthash/: FastHasher.t.html  Fingerprint.t.html  index.html  sidebar-items.js  struct.RandomState.html  trait.BufHasher.html  trait.BuildHasherExt.html  trait.FastHash.html  trait.Fingerprint.html  trait.HasherExt.html  trait.StreamHasher.html
docs/v0.2.1/fasthash_sys/: MurmurHash1Aligned.v.html  MurmurHash3_x86_32.v.html  MurmurHashAligned2.v.html  SpookyHasherFinal.v.html  SpookyHasherHash.v.html  XXH32.v.html  XXH32_createState.v.html  XXH32_reset.v.html  XXH32_update.v.html  _bindgen_ty_9.t.html  constant.XXH_ERROR.html  constant.XXH_OK.html  enum._bindgen_ty_9.html  farmhash64_with_seed.v.html  farmhash64_with_seeds.v.html  farmhash_fingerprint128.v.html  farmhash_fingerprint_uint64.v.html  fn.CityHash128.html  fn.CityHash128WithSeed.html  fn.CityHash32WithSeed.html  fn.CityHash64.html  fn.CityHash64WithSeed.html  fn.CityHash64WithSeeds.html  fn.CityHashCrc128.html  fn.CityHashCrc128WithSeed.html  fn.CityHashCrc256.html  fn.MurmurHash1.html  fn.MurmurHash1Aligned.html  fn.MurmurHash2.html  fn.MurmurHash2A.html  fn.MurmurHash3_x64_128.html  fn.MurmurHash3_x86_128.html  fn.MurmurHash3_x86_32.html  fn.MurmurHash64A.html  fn.MurmurHash64B.html  fn.MurmurHashAligned2.html  fn.MurmurHashNeutral2.html  fn.SpookyHasherFinal.html  fn.SpookyHasherFree.html  fn.SpookyHasherHash.html  (+73 more)
docs/v0.2.2/: search-index.js
docs/v0.2.2/fasthash/: HasherExt.t.html  index.html  sidebar-items.js  struct.RandomState.html  trait.BufHasher.html  trait.FastHash.html  trait.FastHasher.html  trait.Fingerprint.html  trait.HasherExt.html  trait.StreamHasher.html
docs/v0.2.2/fasthash_sys/: CityHash64.v.html  CityHash64WithSeed.v.html  CityHash64WithSeeds.v.html  CityHashCrc128WithSeed.v.html  MurmurHash2A.v.html  MurmurHash3_x64_128.v.html  MurmurHash64A.v.html  SpookyHasherInit.v.html  SpookyHasherUpdate.v.html  XXH64.v.html  XXH64_freeState.v.html  XXH_errorcode.t.html  _bindgen_ty_10.t.html  _bindgen_ty_11.t.html  constant.XXH_ERROR.html  constant.XXH_OK.html  enum._bindgen_ty_9.html  farmhash.v.html  farmhash128.v.html  farmhash128_with_seed.v.html  farmhash32.v.html  farmhash_fingerprint32.v.html  farmhash_fingerprint_uint64_t.v.html  fn.CityHash128.html  fn.CityHash128WithSeed.html  fn.CityHash32WithSeed.html  fn.CityHash64.html  fn.CityHash64WithSeed.html  fn.CityHash64WithSeeds.html  fn.CityHashCrc128.html  fn.CityHashCrc128WithSeed.html  fn.CityHashCrc256.html  fn.MurmurHash1.html  fn.MurmurHash1Aligned.html  fn.MurmurHash2.html  fn.MurmurHash2A.html  fn.MurmurHash3_x64_128.html  fn.MurmurHash3_x86_128.html  fn.MurmurHash3_x86_32.html  fn.MurmurHash64A.html  (+79 more)
fasthash/: Cargo.toml  build.rs
fasthash-sys/: Cargo.toml  build.rs
fasthash-sys/src/: fasthash.cpp  fasthash.hpp  fasthash.rs  fasthash_linux.rs  fasthash_macos.rs  lib.rs  linux.rs  macos.rs
fasthash-sys/src/linux/: fasthash.rs
fasthash-sys/src/macos/: fasthash.rs
fasthash/benches/: bench.rs  hash.rs
fasthash/src/: ahash.rs  city.rs  cityhash.rs  farm.rs  hasher.rs  highway.rs  komi.rs  lib.rs  lookup3.rs  meow.rs  metro.rs  mum.rs  murmur.rs  murmur2.rs  murmur3.rs  mx3.rs  nm.rs  pengy.rs  prv.rs  sea.rs  spooky.rs  t1ha.rs  umash.rs  wy.rs  xx.rs  xxh3.rs
(+870 files in other folders)
