[package]
name = "fasthash-sys"
version = "0.4.1"
authors = ["Flier Lu <flier.lu@gmail.com>"]
description = "A suite of non-cryptographic hash functions for Rust."
homepage = "https://github.com/flier/rust-fasthash"
repository = "https://github.com/flier/rust-fasthash.git"
keywords = ["hash", "hashing"]
license = "Apache-2.0"
build = "build.rs"
edition = "2018"

[features]
default = ["native"]
native = []
aes = []
sse41 = []
sse42 = ["sse41"]
avx = []
avx2 = ["avx"]
gen = ["bindgen"]
t1ha = []

[dependencies]
cfg-if = "0.1"

[build-dependencies]
lazy_static = "1.4"
raw-cpuid = "6"
cc = "1.0"
bindgen = { version="0.51", optional=true }
