[package]
authors = ["Flier Lu <flier.lu@gmail.com>"]
build = "build.rs"
description = "A suite of non-cryptographic hash functions for Rust."
edition = "2018"
homepage = "https://github.com/flier/rust-fasthash"
keywords = ["hash", "hashing"]
license = "Apache-2.0"
name = "fasthash-sys"
repository = "https://github.com/flier/rust-fasthash.git"
version = "0.4.1"

[features]
aes = []
avx = []
avx2 = ["avx"]
default = ["native"]
gen = ["bindgen"]
native = []
sse41 = []
sse42 = ["sse41"]
t1ha = []

[dependencies]
cfg-if = "0.1"

[build-dependencies]
bindgen = {version = "0.59", optional = true}
cc = "1.0"
lazy_static = "1.4"
raw-cpuid = "8"
