[package]
authors = ["Flier Lu <flier.lu@gmail.com>"]
build = "build.rs"
description = "A suite of non-cryptographic hash functions for Rust."
edition = "2018"
homepage = "https://github.com/flier/rust-fasthash"
keywords = ["hash", "hashing"]
license = "Apache-2.0"
name = "fasthash-sys"
repository = "https://github.com/flier/rust-fasthash.git"
version = "0.4.1"

[features]
default = ["native", "all"]

gen = ["bindgen"]

aes = []
avx = []
avx2 = ["avx"]
native = []
sse41 = []
sse42 = ["sse41"]

all = [
  "city",
  "farm",
  "highway",
  "komi",
  "lookup3",
  "meow",
  "metro",
  "mum",
  "murmur",
  "mx3",
  "nm",
  "pengy",
  "prv",
  "spooky",
  "t1ha",
  "wy",
  "xx",
]
city = []
farm = []
highway = []
komi = []
lookup3 = []
meow = []
metro = []
mum = []
murmur = []
mx3 = []
nm = []
pengy = []
prv = []
spooky = []
t1ha = []
wy = []
xx = []

[dependencies]
cfg-if = "1.0"

[build-dependencies]
bindgen = {version = "0.59", optional = true}
cargo-emit = "0.2"
cc = "1.0"
lazy_static = "1.4"
raw-cpuid = "10"
