[package]
authors = ["Flier Lu <flier.lu@gmail.com>"]
description = "A suite of non-cryptographic hash functions for Rust."
documentation = "https://flier.github.io/rust-fasthash/"
edition = "2018"
homepage = "https://github.com/flier/rust-fasthash"
keywords = ["hash", "hashing"]
license = "Apache-2.0"
name = "fasthash"
repository = "https://github.com/flier/rust-fasthash.git"
version = "0.4.1"

[features]
aes = ["fasthash-sys/aes"]
avx = ["fasthash-sys/avx"]
avx2 = ["fasthash-sys/avx2"]
default = ["doc", "native", "t1ha"]
doc = []
gen = ["fasthash-sys/gen"]
native = ["fasthash-sys/native"]
sse41 = ["fasthash-sys/sse41"]
sse42 = ["fasthash-sys/sse42"]
t1ha = ["fasthash-sys/t1ha"]

[dependencies]
cfg-if = "1.0"
derive_more = "0.99"
digest = {version = "0.9", optional = true}
lazy_static = "1.3"
num-traits = "0.2"
rand = "0.7"
seahash = "4.0"
xoroshiro128 = {version = "0.5", features = ["rand"]}
ahash = { version = "0.5.6", no-default-features = true }

fasthash-sys = {version = "0.4", path = "../fasthash-sys"}

[dev-dependencies]
criterion = "0.3"

[build-dependencies]
raw-cpuid = "10"

[[bench]]
harness = false
name = "hash"
