[package]
authors = ["Flier Lu <flier.lu@gmail.com>"]
description = "A suite of non-cryptographic hash functions for Rust."
documentation = "https://flier.github.io/rust-fasthash/"
edition = "2018"
homepage = "https://github.com/flier/rust-fasthash"
keywords = ["hash", "hashing"]
license = "Apache-2.0"
name = "fasthash"
repository = "https://github.com/flier/rust-fasthash.git"
version = "0.4.1"

[features]
default = ["doc", "native", "all"]

doc = []
gen = ["fasthash-sys/gen"]

aes = ["fasthash-sys/aes"]
avx = ["fasthash-sys/avx"]
avx2 = ["fasthash-sys/avx2"]
native = ["fasthash-sys/native"]
sse41 = ["fasthash-sys/sse41"]
sse42 = ["fasthash-sys/sse42"]

all = [
  "fasthash-sys/all",
  "ahash",
  "city",
  "farm",
  "highway",
  "komi",
  "lookup3",
  "meow",
  "metro",
  "mum",
  "murmur",
  "nm",
  "prv",
  "seahash",
  "spooky",
  "t1ha",
  "wy",
  "xx",
]
city = ["fasthash-sys/city"]
farm = ["fasthash-sys/farm"]
highway = ["fasthash-sys/highway"]
komi = ["fasthash-sys/komi"]
lookup3 = ["fasthash-sys/lookup3"]
meow = ["fasthash-sys/meow"]
metro = ["fasthash-sys/metro"]
mum = ["fasthash-sys/mum"]
murmur = ["fasthash-sys/murmur"]
nm = ["fasthash-sys/nm"]
prv = ["fasthash-sys/prv"]
spooky = ["fasthash-sys/spooky"]
t1ha = ["fasthash-sys/t1ha"]
wy = ["fasthash-sys/wy"]
xx = ["fasthash-sys/xx"]

[dependencies]
cfg-if = "1.0"
derive_more = "0.99"
lazy_static = "1.3"
num-traits = "0.2"
rand = "0.7"

ahash = {version = "0.7", optional = true}
digest = {version = "0.10", optional = true}
seahash = {version = "4.1", optional = true}
xoroshiro128 = {version = "0.5", features = ["rand"]}

[dependencies.fasthash-sys]
default-features = false
path = "../fasthash-sys"
version = "0.4"

[dev-dependencies]
criterion = {version = "0.3", features = ["html_reports"]}

[build-dependencies]
raw-cpuid = "10"

[[bench]]
harness = false
name = "hash"
